--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
+										<h2>About this page</h2>
 										<p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>经过了一晚上的折腾，终于鼓捣出来一个小小的个人主页了！膨胀！<br />
+这下周末不会和以前一样无聊了，学习过后有所收获的这种喜悦真的是太棒了！<br />虽然目前对着记事本编辑html有点儿蠢，不过管他呢，后边慢慢来，先让我有个自己的小小空间再说啦~</p>
 								</div>
 							</section>
 
