--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
 									<p>经过了一晚上的折腾，终于鼓捣出来一个小小的个人主页了！膨胀！<br />
-这下周末不会和以前一样无聊了，学习过后有所收获的这种喜悦真的是太棒了！<br />虽然目前对着记事本编辑html有点儿蠢，不过管他呢，后边慢慢来，先让我有个自己的小小空间再说啦~</p>
+这下周末不会和以前一样无聊了，学习过后有所收获的这种喜悦真的是太棒了！<br />虽然目前对着记事本编辑html有点儿蠢，不过管他呢，后边慢慢来，先让我有个自己的小小空间再说啦~<br />后面的内容都点不进去？点不进去就对啦，因为它目前还是个空壳XD</p>
 								</div>
 							</section>
 
