--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
+						<li><a href="#three">Essays</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
@@ -54,8 +54,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>About this page</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<p>这是我的第一个个人主页，喜欢您来哈哈~<br />目前使用了由<a href="http://html5up.net">HTML5 UP</a>提供的模板~</p>
 									</header>
 									<p>经过了一晚上的折腾，终于鼓捣出来一个小小的个人主页了！膨胀！<br />
 这下周末不会和以前一样无聊了，学习过后有所收获的这种喜悦真的是太棒了！<br />虽然目前对着记事本编辑html有点儿蠢，不过管他呢，后边慢慢来，先让我有个自己的小小空间再说啦~<br />后面的内容都点不进去？点不进去就对啦，因为它目前还是个空壳XD</p>
@@ -66,7 +65,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p></p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write all the code</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
@@ -81,13 +80,13 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>随笔</h3>
+									<p>暂时还不会使用更进阶的方法来写东西，先直接在模板的基础上把所有的随笔都放在首页好了~</p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
+												<h4>2020年8月16日 在这里的第一篇随笔<br />于卫津路校区图书馆北馆406室006</h4>
 												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 											</div>
 										</article>
