--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>2020年8月16日 在这里的第一篇随笔<br />于卫津路校区图书馆北馆406室006</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<p>真的好爱这两个场面啊<br />
+明明是怎么也扯不上关系的两个剧<br />
+可让我动容的地方真的特别像<br />
+《人间正道是沧桑》第35集里，林娥在波光粼粼的延河边看到了无法接受瞿霞和老穆结婚的杨立青，恨铁不成钢的从后背捶了他一把，和他并排坐下劝慰失魂落魄的他：“没有一样东西、一个人天生下来就是属于你立青的……谁说男子汉大丈夫不能哭，你想哭就哭吧。”<br />
+《爱的迫降》第5集里，尹世莉在草原的篝火边安慰钢琴梦破灭、未来被改写的李政赫，拍了拍他的肩：“有时错误的火车会将你载往目的地…即使未来可能不如你的预期…希望你不论搭上哪班火车，都能够抵达目的地。”</p>
 											</div>
 										</article>
 										<article>
