--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
 												<p>是真的不习惯一个人，脱离了某个群体、没有人一起扯淡的日子真的是太难受了。</p>
 											</div>
 										</article>
+                                                                                                                                                                            <article>
+											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>2020年8月24日 回家过了个周末</h4>
+												<p>真的好喜欢这种天气，吸一口带着水汽的冷空气，整个人都舒爽了起来。</p>
+											</div>
+										</article>
 									</div>
 								</div>
 							</section>
